# multihex

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  multihex-tui.py  multihex.py  multihex_core.py  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  TESTING.md  layout-overlay-v1.md  manual.md  ui-testing.md
examples/layouts/: README.md  data_bson.overlay.json  data_cbor.overlay.json  data_der.overlay.json  data_dwarf.overlay.json  data_msgpack.overlay.json  data_pgp.overlay.json  data_spirv.overlay.json  disk_ext4_superblock.overlay.json  disk_fat32.overlay.json  disk_gpt.overlay.json  disk_mbr.overlay.json  disk_ntfs.overlay.json  disk_vhdx.overlay.json  elf_core.overlay.json  elf_executable.overlay.json  exec_ar_deb.overlay.json  exec_cpio.overlay.json  exec_dtb.overlay.json  exec_javaclass.overlay.json  exec_macho64.overlay.json  exec_macho_fat.overlay.json  exec_minidump.overlay.json  exec_pyc.overlay.json  exec_wasm.overlay.json  fmt_bmp.overlay.json  fmt_lz4.overlay.json  fmt_mp4.overlay.json  fmt_sqlite.overlay.json  fmt_tiff.overlay.json  fmt_wav.overlay.json  fmt_webp.overlay.json  fmt_xz.overlay.json  fmt_zip.overlay.json  fmt_zstd.overlay.json  gif.overlay.json  gzip-header.overlay.json  gzip.overlay.json  jpeg.overlay.json  net_arp.overlay.json  (+16 more)
scripts/: run-full-test-suite.sh  run_mutation.sh
scripts/coverage/: README.md  run_coverage.sh
scripts/integration/: lib.sh  run_all.sh  run_cli_behaviors.sh  run_examples.sh  run_layout_overlay.sh  run_smoke.sh
scripts/mutation/: README.md  run_mutation.sh
scripts/performance/: README.md  make_input.py  run_all.sh
scripts/stress/: README.md  gen_overlay.py  lib.sh  measure.py  run_all.sh  run_stress_access.sh  run_stress_args.sh  run_stress_degenerate.sh  run_stress_large_files.sh  run_stress_many_files.sh  run_stress_output.sh  run_stress_overlay.sh  run_stress_search.sh  run_stress_ui.sh  ui_gui_driver.py  ui_tui_driver.py
scripts/ui-tests/: run_ui_tests.sh  update_snapshots.sh
src/multihex/: __init__.py  cli.py  core.py  gui.py  layout_overlay_v1.py  overlay.py  shortcuts.py  tui.py  tui_config.py
tests/: capture_goldens.py  fixtures.py  golden_cases.py  test_byte_class.py  test_cli_broken_pipe.py  test_cli_byte_classes.py  test_cli_config_free.py  test_cli_errors.py  test_cli_layout.py  test_cli_markers.py  test_cli_overlay.py  test_cli_search.py  test_cli_stdin.py  test_cli_streaming.py  test_cli_write_errors.py  test_core_model.py  test_core_parity.py  test_cross_frontend.py  test_entrypoints.py  test_example_overlays.py  test_gui_layout.py  test_gui_overlay.py  test_gui_smoke.py  test_gui_viewstate.py  test_gui_widget.py  test_import_purity.py  test_layout_overlay_v1.py  test_multihex_characterization.py  test_nonregular_inputs.py  test_offset_gutter.py  test_overlay.py  test_overlay_fixtures.py  test_search.py  test_shortcuts.py  test_tui_byte_classes.py  test_tui_config.py  test_tui_config_precedence.py  test_tui_home_end.py  test_tui_keys.py  test_tui_layout.py  (+5 more)
tests/_fixtures/: e_data  eqA  eqB  eqC  idA  u_long  u_mid  u_short
tests/fixtures/overlays/invalid/: README.md  invalid_bad_schema_version.json  invalid_duplicate_path.json  invalid_expected_mismatch.json  invalid_missing_length.json  invalid_negative_length.json  invalid_negative_offset.json  invalid_odd_length_hex.json  invalid_out_of_bounds.json  invalid_overlap.json  invalid_preview_mismatch.json  invalid_sha_mismatch.json  invalid_size_mismatch.json  invalid_unknown_status.json  invalid_unknown_type.json  invalid_uppercase_hex.json  manifest.json
tests/goldens/: differing_color_always.out  differing_json.out  differing_only_diff.out  empty_json.out  empty_length.out  equal_around.out  equal_color_always.out  equal_color_never.out  equal_json.out  equal_limit_rows.out  equal_markers_none.out  equal_markers_none_only_diff.out  equal_markers_single.out  equal_no_ascii.out  equal_only_diff.out  identical_default.out  identical_json.out  identical_ref0.out  single_default.out  single_markers_single.out  unequal_color_always.out  unequal_default.out  unequal_json.out  unequal_length_full_past_eof.out  unequal_length_partial.out  unequal_length_past_all.out  unequal_offset.out  unequal_ref0.out
tests/integration/generators/: make_overlay_samples.py
tests_perf/: README.md  conftest.py  perflib.py  test_perf_json.py  test_perf_overlay.py  test_perf_render.py  test_perf_search.py  test_perf_smoke.py
tests_ui/: README.md  conftest.py  fixtures_ui.py  test_gui_render.py  test_tui_snapshot.py
tests_ui/data/: overlay_sample.json
