[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multihex"
version = "0.1.0"
description = "Side-by-side fixed-offset hex comparison of multiple binary files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/your-org/multihex"
Repository = "https://github.com/your-org/multihex"
Changelog = "https://github.com/your-org/multihex/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tui = [
    "textual>=0.1",
    "rich>=13",
    "tomli>=1.1; python_version < '3.11'",
]
gui = [
    "PySide6>=6.7",
]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "textual>=0.1",
    "rich>=13",
    "tomli>=1.1; python_version < '3.11'",
]

[project.scripts]
multihex = "multihex.cli:main"
multihex-tui = "multihex.tui:main"
multihex-gui = "multihex.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multihex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests live under tests/integration/ and are run via
# scripts/integration/, not pytest; keep them out of default collection.
norecursedirs = ["tests/integration"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
