# Copyright (c) 2026 Philip Cox
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multihex"
version = "0.1.0"
description = "Side-by-side fixed-offset hex comparison of multiple binary files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/mrphilcox/multihex"
Repository = "https://github.com/mrphilcox/multihex"
Changelog = "https://github.com/mrphilcox/multihex/blob/main/CHANGELOG.md"

[project.optional-dependencies]
tui = [
    "textual>=8.2.7",
    "rich>=13",
    "tomli>=1.1; python_version < '3.11'",
]
gui = [
    "PySide6>=6.7",
]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "coverage[toml]>=7",
    "textual>=8.2.7",
    "rich>=13",
    "tomli>=1.1; python_version < '3.11'",
    # Mutation testing is a targeted, manual quality audit of the deterministic
    # core (see [tool.mutmut] and docs/TESTING.md). Pinned to the 2.x series:
    # its config keys (paths_to_mutate/runner), the .mutmut-cache file, and the
    # results/show workflow all changed incompatibly in mutmut 3.x.
    "mutmut>=2.4.5,<3",
]
# Heavy, opt-in UI visual-regression deps for tests_ui/ (NOT installed by the
# normal/dev install; see tests_ui/README.md). The suite skips cleanly when
# any of these is missing.
ui-test = [
    "pytest>=7",
    "textual>=8.2.7",
    "rich>=13",
    "PySide6>=6.7",
    "pytest-textual-snapshot>=1.0",
]

[project.scripts]
multihex = "multihex.cli:main"
multihex-tui = "multihex.tui:main"
multihex-gui = "multihex.gui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multihex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests live under tests/integration/ and are run via
# scripts/integration/, not pytest; keep them out of default collection.
norecursedirs = ["tests/integration"]

# Mutation testing (mutmut 2.x). Targeted, manual quality audit of deterministic
# non-UI modules; NOT part of `python3 -m pytest`, not a CI gate, not a release
# blocker. See docs/TESTING.md. The five paths below are the only mutation
# targets; the UI frontends (tui.py/gui.py), the CLI argument glue (cli.py,
# covered by characterization goldens), and __init__.py are excluded by omission,
# so no paths_to_exclude is needed. Run via scripts/mutation/run_mutation.sh.
[tool.mutmut]
paths_to_mutate = "src/multihex/core.py,src/multihex/overlay.py,src/multihex/layout_overlay_v1.py,src/multihex/shortcuts.py,src/multihex/tui_config.py"
runner = "python3 -m pytest"
tests_dir = "tests/"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
branch = true
# Identify the measured code by import package, not by filesystem path: child
# processes run from fixture working directories, where a relative "src/multihex"
# path would resolve to nothing and silently measure zero lines.
source_pkgs = ["multihex"]
# Most CLI tests run the tool in a child process; parallel mode makes each
# process (parent and children) write its own data fragment, which a following
# `coverage combine` merges. Children opt in via sitecustomize.py +
# COVERAGE_PROCESS_START (see CONTRIBUTING.md "Coverage").
parallel = true

[tool.coverage.report]
precision = 1
show_missing = true
# Lines that never execute under the default headless test lane and are not
# meant to: module CLI shims and typing-only blocks. The TUI/GUI event-loop
# entry points (`app.run()` / `app.exec()`) carry their own `# pragma: no
# cover`; see docs/coverage notes in CONTRIBUTING.md.
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
